Prevent wrap for non-admins

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -121,6 +121,7 @@ header .header-buttons {
     }
     .navigation-controls {
         order: 2;
+        flex: 20%;
     }
     ul#navigation-bar {
         order: 3;
